fix(936): retain bounded OCR owners in one component pool